V.0.014 - Creado Formulario presupuesto

--- a/components/footer.html
+++ b/components/footer.html
@@ -9,7 +9,7 @@
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#!" target="_blank"  style="text-decoration: none; color:white">Regístrate
-                            en Adecco</a>
+                            en Ananda</a>
                     </li>
                     <li>
                         <a href="#!"  style="text-decoration: none; color:white">Encuentra trabajo</a>
@@ -22,10 +22,10 @@
                             de empleo</a>
                     </li>
                     <li>
-                        <a href="#!" style="text-decoration: none; color:white">Trabaja en Adecco</a>
+                        <a href="#!" style="text-decoration: none; color:white">Trabaja en Ananda</a>
                     </li>
                     <li>
-                        <a href="#!" style="text-decoration: none; color:white">Formadores Adecco</a>
+                        <a href="#!" style="text-decoration: none; color:white">Formadores Ananda</a>
                     </li>
                     <li>
                         <a href="#!" style="text-decoration: none; color:white">Preguntas Frecuentes</a>
