--- a/components/presupuesto01/pr01header.html
+++ b/components/presupuesto01/pr01header.html
@@ -1,5 +1,5 @@
-<section id="titulo" class="d-flex flex-row justify-content-center bg-light p-5" style="color:hwb(146 25.5% 51.7%)">
-    <div class="d-flex flex-column justify-content-start text-center col-10">
+<section id="titulo" class="d-flex flex-row justify-content-center p-5" style="background-color:var(--ananda-red)">
+    <div class="d-flex flex-column justify-content-start text-center text-light col-10">
         <h1 class="upp">SOLICITA TU PRESUPUESTO ONLINE</h1>
         <h3>Solicita presupuesto sin compromiso, rellena el formulario con los datos necesarios y obtén una oferta en 24 horas.</h3>
 
