--- a/components/presupuesto01/pr01servicios.html
+++ b/components/presupuesto01/pr01servicios.html
@@ -1,8 +1,8 @@
 <section id="servicios" class="d-flex flex-column align-items-center">
-    <div class="d-flex flex-row justify-content-center w-100 py-2" style="background-color:var(--ananda-green-w20);color:white">
-        <h1 class="col-12 col-md-10 col-lg-6 p-4 text-center">Selecciona el servicio que más se ajuste a tus necesidades:</h1>
+    <div class="d-flex flex-row justify-content-center w-100 pt-5" style="color:var(--ananda-red);">
+        <h4 class="col-12 col-md-10 col-lg-6 p-4 text-center">Selecciona el servicio que más se ajuste a tus necesidades:</h4>
     </div>
-    <div class="col-12 col-md-10 d-flex flex-row justify-content-center p-4 pt-5">
+    <div class="col-12 col-md-10 d-flex flex-row justify-content-center p-4 pt-2">
     <div id="table">
         <div id="row" class="row" style="min-height:50vh">
             <div id="cell1" class="d-flex flex-column justify-content-between col-12 col-lg-4">
@@ -19,7 +19,7 @@
                             </div>
                         </div>
                         <p class="mb-4">Necesito contratar al profesional ideal para mi empresa.</p>
-                        <a href="#!" class="btn btn-outline-light">
+                        <a href="../public/presupuesto-formulario01.html" class="btn btn-outline-light">
                             Me interesa
                         </a>
                     
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <p class="mb-4">Necesito un trabajador temporal para mañana.</p>
-                        <a href="#!" class="btn btn-outline-light" style="border-color:var(--ananda-red);color:var(--ananda-red)">
+                        <a href="#!" class="btn btn-outline-salmon">
                             Me interesa
                         </a>
                     </div>
