V.0.017 - Formulario acabado y comenzado versión webapp

--- a/components/index/index_call1.html
+++ b/components/index/index_call1.html
@@ -1,5 +1,5 @@
 <section id="call-1" style="background-color:hwb(61 19.1% 12.9%)" class="d-none d-md-flex flex-row justify-content-center py-2 px-3" style="">
     <div class="d-flex flex-row justify-content-between text-dark col-11 col-xl-8 col-lg-10" style="">
         <span>¿Quieres saber por qué somos diferentes?<a href="#!" class="link-offset-2" style="color:black;text-decoration:none;"><strong> haz clic aquí <i class="bi bi-arrow-right"></i></strong></a></span>
-        <a id="call-1-closer" href="javascript:void()" class="icon-link" style="color:black"><i class="bi bi-x-circle" style="font-size:1.25rem;"></i></a>
+        <div id="call-1-closer" onclick="javascript:document.getElementById('call-1').remove()" class="btn btn-close" style="color:black"></div>
     </section>
