--- a/components/index/index_banner1.html
+++ b/components/index/index_banner1.html
@@ -6,7 +6,7 @@
             </div>
             <div class="d-flex flex-column text-light col-10 col-lg-4">
                 <h6>¿necesitas trabajadores?</h6>
-                <h1 class="display-2" style="line-height:4rem"><strong>solicita tu presupuesto</strong> online.</h1>
+                <h1 class="mb-3 display-2 text-responsive" style="line-height:4rem;"><strong>solicita tu presupuesto</strong> online.</h1>
                 <p>Solicita un presupuesto sin compromiso. Cubrimos el 93% de los contratos en 24 horas. Paga sólo por las horas trabajadas y por el tiempo que necesites al trabajador. Ahorra en costes derivados del absentismo laboral, vacaciones, matrimonios, indemnizaciones y permisos retribuidos; con todas las garantías laborales.</p>
                 <div class="d-inline-flex"> <a href="public/presupuesto-01.html" class="btn btn-outline-light text-start">calcular presupuesto</a></div>
             </div>
