--- a/components/index/index_info1.html
+++ b/components/index/index_info1.html
@@ -11,28 +11,28 @@
                 <a href="#!" class="" style="text-decoration: none;"><h6 style="color:hwb(341 13% 42%)">Ver todas las oficinas <i class="bi bi-arrow-right"></i></h6></a>
             </div>
         </div>
-      <div class="col-lg-6 col-12 text-lg-start text-center my-3">
+      <div class="col-lg-6 col-12 text-lg-left text-center my-3">
             <h5 style="color:hwb(341 13% 42%)">SECTORES</h5>
             <h5>Especializados por áreas y sectores</h5>
             <p>Disponemos de consultores/as especializados en diferentes sectores estratégicos, así como en diferentes áreas laborales, que conocen perfectamente los diferentes convenios y casuísticas sectoriales. Nuestra especialización nos permite entender mejor tus necesidades, realizar una selección más precisa y adaptar nuestras soluciones a tu sector, incluso en los casos más complejos.</p>
-            <div class="container-fluid row">
-                <div class="col-12 col-lg-6">
+            <div class="container-fluid row ">
+                <div class="col-12 col-lg-6 ">
                     <table class="table table-hover">
-                        <tr><td><i class="bi bi-car-front" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Automotive</span></td></tr>
-                        <tr><td><i class="bi bi-camera-reels" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Audiovisual</span></td></tr>
-                        <tr><td><i class="bi bi-globe" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">TIC/Tecnología</span></td></tr>
-                        <tr><td><i class="bi bi-bank" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Banca & Seguros</span></td></tr>
-                        <tr><td><i class="bi bi-headset" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Contact Center</span></td></tr>
+                        <tr><td><i class="bi bi-car-front" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Automotive</span></td></tr>
+                        <tr><td><i class="bi bi-camera-reels" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Audiovisual</span></td></tr>
+                        <tr><td><i class="bi bi-globe" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">TIC/Tecnología</span></td></tr>
+                        <tr><td><i class="bi bi-bank" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Banca & Seguros</span></td></tr>
+                        <tr><td><i class="bi bi-headset" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Contact Center</span></td></tr>
                     </table>
 
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 ">
                     <table class="table table-hover">
-                        <tr><td><i class="bi bi-bandaid" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Sanidad</span></td></tr>
-                        <tr><td><i class="bi bi-basket" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Comercio</span></td></tr>
-                        <tr><td><i class="bi bi-briefcase" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Ejecutivo</span></td></tr>
-                        <tr><td><i class="bi bi-bus-front" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Transporte</span></td></tr>
-                        <tr><td><i class="bi bi-cup-hot" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ms-3" style="font-weight: 300;">Hostelería</span></td></tr>
+                        <tr><td><i class="bi bi-bandaid" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Sanidad</span></td></tr>
+                        <tr><td><i class="bi bi-basket" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Comercio</span></td></tr>
+                        <tr><td><i class="bi bi-briefcase" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Ejecutivo</span></td></tr>
+                        <tr><td><i class="bi bi-bus-front" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Transporte</span></td></tr>
+                        <tr><td><i class="bi bi-cup-hot" style="font-size: 3rem; color: lightgrey; vertical-align: middle;" ></i><span class="ml-3" style="font-weight: 300;">Hostelería</span></td></tr>
                     </table>
                 </div>
                 <a href="#!" class="" style="text-decoration: none;"><h6 style="color:hwb(341 13% 42%)">Ver todos los sectores <i class="bi bi-arrow-right"></i></h6></a>
