--- a/components/index/index_slide.html
+++ b/components/index/index_slide.html
@@ -1,17 +1,17 @@
     <!--md+----------------------------------------------------------------------------------------->
       <section id="slide" class="d-none d-md-flex flex-row justify-content-center bg-accent bg-position-center bg-size-cover py-3 py-sm-5" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/slider.jpg?updatedAt=1691055929606'); background-position: center; background-repeat: no-repeat; background-size:cover; max-height: 600px;">
-          <div class="d-flex flex-row justify-content-between col-11 col-xl-8 col-lg-10">
+          <div class="d-flex flex-row justify-content-between col-11 col-xl-10 col-lg-11">
               <div class="py-5 col-md-5">
-                  <div class="text-start py-xl-3">
+                  <div class="text-left py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA CANDIDATOS</h6>
-                      <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete. Te ayudamos a encontrar un trabajo en el que te sientas bien.</span>
+                      <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block lead text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete. Te ayudamos a encontrar un trabajo en el que te sientas bien.</span>
                       <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:hwb(341 13% 42%); color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right ms-2"></i></a></div>
                   </div>
               </div>
               <div class="py-5 col-md-5">
-                  <div class="text-end py-xl-3">
+                  <div class="text-right py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA EMPRESAS</h6>
-                      <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad. Más de 500 empresas ya confían en Ananda.</span>
+                      <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block lead text-light fw-light mx-2 opacity-70">Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad. Más de 500 empresas ya confían en Ananda.</span>
                       <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:hwb(341 13% 42%); color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right ms-2"></i></a></div>
                   </div>
                 </div>
