--- a/components/index/index_testimonios.html
+++ b/components/index/index_testimonios.html
@@ -1,7 +1,7 @@
 <!--lg+------------------------------------------------------------------------------------------>
 <section id="testimonios" class="mt-5 py-3 py-sm-5 d-none d-lg-flex justify-content-center ">
-    <div class="row col-12 col-lg-10">
-        <h3 class="mb-5">Nos importan las personas. Nos importas tú: tu situación personal y tus objetivos.</h3>
+    <div class="row col-12 col-lg-12">
+        <h3 class="col-12 mb-5">Nos importan las personas. Nos importas tú: tu situación personal y tus objetivos.</h3>
         <div class="col-12 col-lg-3 h-100">
             <div class="overflow-hidden h-100 d-flex flex-column justify-content-between" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial1-ok.jpg?updatedAt=1690825152142');background-size: cover; background-position:center; border-radius: 10px;">
                 <div class="container-fluid d-flex flex-column justify-content-between p-3 h-100">
@@ -66,7 +66,7 @@
     <div class="row col-12 col-lg-10">
         <h3 class="mb-5 text-center text-md-start">Nos importa tu situación personal y objetivos</h3>
         <div class="col-12 col-lg-3 m-2">
-            <div class="rounded-3 overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial1-mbl.jpg?updatedAt=1690825521641');background-size: cover; background-position:center; ">
+            <div class="rounded-lg overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial1-mbl.jpg?updatedAt=1690825521641');background-size: cover; background-position:center; ">
                 <div class="container-fluid d-flex flex-column justify-content-center p-5">
                     
                     <h5 class="text-light">Empleo que no requiere experiencia</h5>
@@ -78,7 +78,7 @@
         </div>
         
         <div class="col-12 col-lg-3 m-2">
-            <div class="rounded-3 overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial2-mobile.jpg?updatedAt=1690825152008');background-size: cover; background-position:center; ">
+            <div class="rounded-lg overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial2-mobile.jpg?updatedAt=1690825152008');background-size: cover; background-position:center; ">
                 <div class="container-fluid d-flex flex-column justify-content-center p-5">
                     
                     <h5 class="text-light">Empleo flexible o tiempo parcial</h5>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="col-12 col-lg-3 m-2">
-            <div class="rounded-3 overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial3-mobile.jpg?updatedAt=1690825521683');background-size: cover; background-position:center; ">
+            <div class="rounded-lg overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial3-mobile.jpg?updatedAt=1690825521683');background-size: cover; background-position:center; ">
                 <div class="container-fluid d-flex flex-column justify-content-center p-5">
                     
                     <h5 class="text-light">Empleo con contrato indefinido</h5>
@@ -102,7 +102,7 @@
         </div>
 
         <div class="col-12 col-lg-3 m-2">
-            <div class="rounded-3 overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial4-mobile.jpg?updatedAt=1690825521771');background-size: cover; background-position:center; ">
+            <div class="rounded-lg overflow-hidden" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/testimonial4-mobile.jpg?updatedAt=1690825521771');background-size: cover; background-position:center; ">
                 <div class="container-fluid d-flex flex-column justify-content-center p-5">
                     
                     <h5 class="text-light">Reincorporación al mercado laboral</h5>
