--- a/components/index/index_banner2.html
+++ b/components/index/index_banner2.html
@@ -1,13 +1,13 @@
 <!--md+------------------------------------------------------------------------------------------>
 <section id="banner" class="justify-content-center py-5 d-none d-md-flex" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/CIERRE_FOOTER.jpg?updatedAt=1690826636249');background-position: center;background-repeat: no-repeat;background-size: cover; min-height: 350px;">
     <div class="row d-flex flex-row justify-content-evenly col-10">
-        <div class="d-flex flex-column justify-content-center text-center col-5">
+        <div class="d-flex flex-column justify-content-center text-center col-6 p-2">
             <h1 class="text-light mb-5">¿Estas buscando trabajo?</h1>
             <a href="#!" style="text-decoration: none;" class="">
                 <span class="p-2" style="background-color:hwb(341 13% 42%); border-radius: 10px; color: white;font-weight: 500;">Quiero trabajar</span>
             </a>    
         </div>
-        <div class="d-flex flex-column justify-content-center text-center col-5">
+        <div class="d-flex flex-column justify-content-center text-center col-6 p-2">
             <h1 class="text-light mb-5">¿Eres una empresa que busca talento?</h1>
             <a href="#!" style="text-decoration: none;" class="">
                 <span class="p-2" style="background-color:hwb(341 13% 42%); border-radius: 10px; color: white;font-weight: 500;">Quiero contratar</span>
@@ -17,15 +17,15 @@
 </section>
 
 <!--xxs-to-sm------------------------------------------------------------------------------------------>
-<section id="banner" class="d-flex justify-content-center py-5 d-md-none" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/CIERRE_FOOTER_MBL.jpg?updatedAt=1690826512125');background-position: center;background-repeat: no-repeat;background-size: cover; min-height: 600px;">
-    <div class="d-flex flex-column justify-content-around">
+<section id="banner" class=" py-5 d-md-none" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/CIERRE_FOOTER_MBL.jpg?updatedAt=1690826512125');background-position: center;background-repeat: no-repeat;background-size: cover; min-height: 600px;">
+    <div class="d-flex flex-column justify-content-around min-vh-50">
         <div class="d-flex flex-column justify-content-center text-center col-12">
             <h1 class="text-light mb-5">¿Estas buscando trabajo?</h1>
             <a href="#!" style="text-decoration: none;" class="">
                 <span class="p-2" style="background-color:hwb(341 13% 42%); border-radius: 10px; color: white;font-weight: 500;">Quiero trabajar</span>
             </a>    
         </div>
-        <div class="d-flex flex-column justify-content-center text-center col-12">
+        <div class="d-flex flex-column justify-content-center  text-center col-12">
             <h1 class="text-light mb-5">¿Eres una empresa que busca talento?</h1>
             <a href="#!" style="text-decoration: none;" class="">
                 <span class="p-2" style="background-color:hwb(341 13% 42%); border-radius: 10px; color: white;font-weight: 500;">Quiero contratar</span>
